--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,17 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/datetimepicker": "^8.6.0",
+    "@react-navigation/bottom-tabs": "^7.10.1",
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.10.0",
+    "axios": "^1.13.2",
     "expo": "~54.0.31",
     "expo-auth-session": "~7.0.10",
+    "expo-camera": "^17.0.10",
+    "expo-file-system": "^19.0.21",
+    "expo-image-picker": "^17.0.10",
+    "expo-media-library": "^18.2.1",
     "expo-notifications": "~0.32.16",
     "expo-status-bar": "~3.0.9",
     "expo-web-browser": "~15.0.10",
