--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.10.0",
     "expo": "~54.0.31",
+    "expo-auth-session": "^7.0.10",
     "expo-image-picker": "^17.0.10",
     "expo-notifications": "~0.32.16",
     "expo-status-bar": "~3.0.9",
+    "expo-web-browser": "^15.0.10",
     "firebase": "^12.8.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -23,6 +25,7 @@
     "react-native-image-picker": "^8.2.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.15.1",
     "react-native-web": "^0.21.0"
   },
   "devDependencies": {
