--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.10.0",
+    "axios": "^1.13.2",
     "expo": "~54.0.31",
     "expo-auth-session": "^7.0.10",
     "expo-image-picker": "^17.0.10",
