--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.13.2",
     "expo": "~54.0.31",
     "expo-auth-session": "^7.0.10",
+    "expo-file-system": "^19.0.21",
     "expo-image-picker": "^17.0.10",
     "expo-notifications": "~0.32.16",
     "expo-status-bar": "~3.0.9",
